# OS_labs

./: .~lock.report.pdf#  CMakeLists.txt  README.md  benchmark.cpp  child.cpp  generate_tests.py  main.cpp  parent.cpp
include/: Arguments.h  Row_Or_Line.h  some_functions.h
input/: benchmark_result
src/: Arguments.cpp  Row_Or_Line.cpp  child.cpp  parent.cpp  some_functions.cpp
